# phantom_tunnel

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.alpine  README.md  config.example.toml  docker-compose.yml  setup.sh
docs/: DEPLOYMENT.md  DOCKER.md  PROTOCOL_SPEC.md
examples/: client.config.toml  server.config.toml
src/: lib.rs
src/config/: mod.rs
src/crypto/: aead.rs  handshake.rs  kdf.rs  keys.rs  mod.rs
src/obfuscation/: fingerprint.rs  mod.rs  padding.rs  timing.rs
src/protocol/: mod.rs
src/proxy/: http.rs  mod.rs  socks5.rs
src/transport/: connection.rs  dns.rs  mod.rs  tcp.rs  tls.rs
src/tunnel/: frame.rs  mod.rs  multiplexer.rs  stream.rs
tests/: integration_test.rs
